--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ header {
     font-size: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 #nav li {
     font-size: 14px;
     padding: 0;
@@ -102,4 +106,14 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/* ---------------------------------- Hover.css */
+.hvr-sweep-to-bottom {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    margin: 0;
 }
