--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ footer {
     width: 60%;
 }
 
-/* ---------------------------------- Skills */
+/* ----------------------------------------Skills */
 
 .progress {
     position: relative;
@@ -261,11 +261,11 @@ footer {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding: 10px 30px 2px 10px;
+    padding:14px 30px 12px 10px;
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
 
 .progress-section {
-    margin: 40px 40px;
+    margin: 40px 20px;
 }
